--- a/ece_study_materials.html
+++ b/ece_study_materials.html
@@ -60,7 +60,7 @@
             <hr>
             <h2>Syllabus</h2>
             <ol>
-                <a href="study materials all/ece all/4th sem all/2ecesyll.pdf" target="_blank">Syllabus copy</a><br>
+                <a href="study materials all/ece all/3rd sem all/2ecesyll.pdf" target="_blank">Syllabus copy</a><br>
                 <small>for 3<sup>rd</sup> sem serach with a code number 30** and for a 4<sup>th</sup> sem search with a code 40**</small>
             </ol>
 
