--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         <hr>
         
     </section>
+    <section2>
+        <h2>About:-</h2><p>Welcome to our platform dedicated to helping VTU students excel in their studies and ace their exams effortlessly. We understand the challenges students face in navigating the vast syllabus of VTU,. That's why we've curated a comprehensive collection of study materials designed specifically to cater to the needs of students. Our mission is simple: to provide students with easy access to high-quality study resources, ranging from lecture notes and textbooks to solved question papers and exam tips. With our platform, you can enhance your understanding of complex concepts, practice with confidence, and boost your exam performance. Whether you're preparing for semester exams, competitive exams, or seeking additional resources for better comprehension, our platform is your ultimate companion on your academic journey. Empower yourself with knowledge, conquer your exams, and pave the way for a successful career in the field of Electronics and Communication Engineering. Join us today and embark on a journey towards academic excellence!</p>
+    </section2>
+    
 
    
 </main>
