--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 </body>
 <footer>
     <i><h3>Contactus</h3></i>
-    <b><p>Gmail:- rajunsshiva@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Copyright &copy; 2022 Pass-Engineering-Easy</p></b>
+    <b><p>Gmail:- shivarajsmurthy@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Copyright &copy; 2022 Pass-Engineering-Easy</p></b><br>
+    <a href="https://www.linkedin.com/in/shivaraju-ns-0642a6291?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Linked in</a>
+    
 </footer>
 </html>
